// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderTemplate > スナップショット > 400x210 のサイズに対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "210px",
      "justifyContent": "space-between",
      "padding": "21.333333333333332px",
      "width": "400px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "320px",
          "width": "320px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "18.666666666666664px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      >
        テストタイトル
      </span>
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "4px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "0.6666666666666666px",
          "display": "flex",
          "height": "1.3333333333333333px",
          "width": "16px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "12px",
          "fontWeight": 400,
        }
      }
    >
      yu9824's Notes
    </span>
  </div>
</div>
`;

exports[`renderTemplate > スナップショット > 630x630 のサイズに対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "630px",
      "justifyContent": "space-between",
      "padding": "64px",
      "width": "630px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "504px",
          "width": "504px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "56px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      >
        テストタイトル
      </span>
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "12px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "2px",
          "display": "flex",
          "height": "4px",
          "width": "48px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "28px",
          "fontWeight": 400,
        }
      }
    >
      yu9824's Notes
    </span>
  </div>
</div>
`;

exports[`renderTemplate > スナップショット > カスタム siteName に対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "630px",
      "justifyContent": "space-between",
      "padding": "64px",
      "width": "1200px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "960px",
          "width": "960px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "56px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      >
        テストタイトル
      </span>
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "12px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "2px",
          "display": "flex",
          "height": "4px",
          "width": "48px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "28px",
          "fontWeight": 400,
        }
      }
    >
      My Custom Blog
    </span>
  </div>
</div>
`;

exports[`renderTemplate > スナップショット > デフォルト入力に対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "630px",
      "justifyContent": "space-between",
      "padding": "64px",
      "width": "1200px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "960px",
          "width": "960px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "56px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      >
        テストタイトル
      </span>
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "12px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "2px",
          "display": "flex",
          "height": "4px",
          "width": "48px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "28px",
          "fontWeight": 400,
        }
      }
    >
      yu9824's Notes
    </span>
  </div>
</div>
`;

exports[`renderTemplate > スナップショット > 異なるサイズに対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "420px",
      "justifyContent": "space-between",
      "padding": "42.666666666666664px",
      "width": "800px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "640px",
          "width": "640px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "37.33333333333333px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      >
        テストタイトル
      </span>
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "8px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "1.3333333333333333px",
          "display": "flex",
          "height": "2.6666666666666665px",
          "width": "32px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "18.666666666666664px",
          "fontWeight": 400,
        }
      }
    >
      yu9824's Notes
    </span>
  </div>
</div>
`;

exports[`renderTemplate > スナップショット > 空タイトルに対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "630px",
      "justifyContent": "space-between",
      "padding": "64px",
      "width": "1200px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "960px",
          "width": "960px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "56px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "12px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "2px",
          "display": "flex",
          "height": "4px",
          "width": "48px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "28px",
          "fontWeight": 400,
        }
      }
    >
      yu9824's Notes
    </span>
  </div>
</div>
`;

exports[`renderTemplate > スナップショット > 長いタイトルに対して一定の JSX 構造を返す 1`] = `
<div
  style={
    {
      "backgroundColor": "#0f172a",
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "fontFamily": ""OGSansJP", sans-serif",
      "height": "630px",
      "justifyContent": "space-between",
      "padding": "64px",
      "width": "1200px",
    }
  }
>
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flex": 1,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "maxWidth": "960px",
          "width": "960px",
        }
      }
    >
      <span
        style={
          {
            "WebkitBoxOrient": "vertical",
            "WebkitLineClamp": 3,
            "color": "#f1f5f9",
            "display": "-webkit-box",
            "fontSize": "56px",
            "fontWeight": 700,
            "lineHeight": 1.4,
            "overflow": "hidden",
            "wordBreak": "break-all",
          }
        }
      >
        これは非常に長いタイトルです。複数行にわたって表示されることを想定しています。テキスト省略機能が正し…
      </span>
    </div>
  </div>
  <div
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "gap": "12px",
      }
    }
  >
    <div
      style={
        {
          "backgroundColor": "#38bdf8",
          "borderRadius": "2px",
          "display": "flex",
          "height": "4px",
          "width": "48px",
        }
      }
    />
    <span
      style={
        {
          "color": "#38bdf8",
          "fontSize": "28px",
          "fontWeight": 400,
        }
      }
    >
      yu9824's Notes
    </span>
  </div>
</div>
`;
